--- a/carousel.css
+++ b/carousel.css
@@ -8,12 +8,32 @@ body {
   color: #5a5a5a;
 }
 
+h2 {
+  margin-top: 3rem;
+  padding: auto;
+  font-size: 5rem;
+  text-align: center;
+  font-weight: bolder;
+  color: #704296;
+}
+
+h3{
+  margin-top:3rem;
+  margin-left: 15rem;
+  margin-right: 15rem;
+  margin-bottom: 3rem;
+}
+
+ul{
+  margin-top: 2rem;
+}
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
 
 /* Carousel base class */
 .carousel {
+  margin-top: 30px;
   margin-bottom: 4rem;
 }
 /* Since positioning the image, we need to help out the caption */
@@ -24,14 +44,15 @@ body {
 
 /* Declare heights because of positioning of img element */
 .carousel-item {
-  height: 32rem;
+  width: 100vw;
+  height: 75vh;
 }
 .carousel-item > img {
+  width: 100%;
   position: absolute;
   top: 0;
   left: 0;
-  min-width: 100%;
-  height: 32rem;
+  height:auto;
 }
 
 
@@ -44,7 +65,7 @@ body {
   text-align: center;
 }
 .marketing h2 {
-  font-weight: 400;
+  font-weight: bolder;
 }
 /* rtl:begin:ignore */
 .marketing .col-lg-4 p {
@@ -63,7 +84,7 @@ body {
 
 /* Thin out the marketing headings */
 .featurette-heading {
-  font-weight: 300;
+  font-weight: bold;
   line-height: 1;
   /* rtl:remove */
   letter-spacing: -.05rem;
@@ -88,6 +109,7 @@ body {
 
 @media (min-width: 62em) {
   .featurette-heading {
-    margin-top: 7rem;
+    margin-top: 0;
   }
 }
+
