--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,34 @@
     z-index: 99;
 }
 
+p{
+    font-size: 20px;
+    letter-spacing:1px;
+    line-height:27.2px;
+    margin-block-end:15px;
+    margin-block-start:0px;
+    margin-bottom:15px;
+    margin-inline-end:0px;
+    margin-inline-start:0px;
+    margin-left:0px;
+    margin-right:0px;
+    margin-top:3px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
 
 
+h1{
+    font-size: 28px;
+    margin-block-end:15px;
+    margin-block-start:50px;
+    margin-bottom:15px;
+    margin-inline-end:0px;
+    margin-inline-start:0px;
+    margin-left:0px;
+    margin-right:0px;
+    margin-top:8px;
+}
 
 /*** Spinner ***/
 #spinner {
@@ -523,6 +549,10 @@
 
 .footer .copyright a:hover {
     color: var(--primary);
+}
+
+.news-text h2{
+    font-size: 1.3rem;
 }
 
 .news-text p{
